fixing overflow issues

--- a/assets/css/atcb-3d.css
+++ b/assets/css/atcb-3d.css
@@ -210,10 +210,19 @@
  * Modal
  */
 
+/* we disable scrolling only on small screens - only there, the case is relevant and at the same time, they have no scrollbars and therefore no "jumping" */
+@media only screen and (max-width: 575px) {
+  .atcb-modal-no-scroll {
+    overflow-y: hidden;
+  }
+}
+
 .atcb-modal {
   display: block;
+  margin: auto;
   min-width: 250px;
   width: auto;
+  position: relative;
   z-index: 150;
 }
 
@@ -288,7 +297,6 @@
  */
 
 #atcb-bgoverlay {
-  align-items: center;
   animation: atcb-bgoverlay-animate 0.1s ease 0s 1 normal forwards;
   backdrop-filter: blur(2px);
   background: rgb(20 20 20 / 20%);
@@ -296,14 +304,16 @@
   box-sizing: border-box;
   display: flex;
   height: 100vh;
-  justify-content: center;
   left: 0;
-  max-height: 100%;
+  min-height: available;
   min-height: fill-available;
-  max-width: 100%;
+  min-height: fill-available;
+  min-width: available;
+  min-width: fill-available;
   min-width: fill-available;
   opacity: 0;
-  padding: 15px;
+  overflow-y: scroll;
+  padding: 30px 15px;
   position: fixed;
   right: 0;
   top: 0;
